tests/fail/variable-does-not-exist.virtue
print "{a}"

# error: variable does not exist
#  --> test.virtue:1:9
#    |
#  1 | print "{a}"
#    |         ^
#
